namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: health-service
  labels:
    name: health-service
