service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-service
  namespace: health-service
  labels:
    app: health-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: health-service
