ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-service-ingress
  namespace: health-service
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: health-service
            port:
              number: 80
